# libbasehangul

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  basehangul_8c.html  basehangul_8c.js  basehangul_8h.html  basehangul_8h.js  basehangul_8h_source.html  config_8h.html  config_8h.js  config_8h_source.html  digit__set_8h.html  digit__set_8h.js  digit__set_8h_source.html  files.html  files.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group__encoding.html  id_rsa.enc  index.html  modules.html  modules.js  navtree.js  navtreeindex.js  type_8h.html  type_8h_source.html
docs/: doxygen.conf  main.css  publish.sh
include/: basehangul.h  config.h.in  type.h
search/: all_62.js  all_63.js  all_64.js  all_75.js  defines_68.js  enums_65.js  enumvalues_75.js  files_62.js  files_64.js  functions_62.js  functions_63.js  functions_75.js  search.js  variables_64.js
src/: basehangul.c  digit_set.h
test/: test_example.cc  test_example_decode.cc  test_example_encode.cc
